tests/ui/consts/const_transmute_type_id7.stderr
error[E0080]: constructing invalid value at [0]: encountered a maybe-null reference
  --> $DIR/const_transmute_type_id7.rs:13:56
   |
LL | const A: [&(); 16 / size_of::<*const ()>()] = unsafe { transmute(TypeId::of::<i32>()) };
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `A` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
